# stock-teach

./: .gitignore  app.py  data_fetcher.py  main.py  pyproject.toml  real_time.py  stock_data_exporter.py  tech_indicators.py
.github/workflows/: deploy.yml
app/: main.py
app/api/: router.py
app/api/endpoints/: realtime_data.py  stock_analysis.py  stock_export.py  stock_stage.py
app/core/: config.py  logging.py
app/models/: schemas.py
app/services/: data_fetcher.py  realtime_data.py  stage_by_tech.py  stock_analyzer.py  stock_exporter.py  tech_indicators.py
summary/: stock_summary.py
